2008-10-23  Ian Beckwith  <ianb@erislabs.net>

	* Bumped version to 2.2.4.
	* New elvi: ntrs, scicom, springer.
	  Thanks to Wim Van Hoydonck.
	* Added tests for ntrs and springer
	  Scicom cannot be tested as it needs javascript.

2008-09-13  Ian Beckwith  <ianb@erislabs.net>

	* Default to graphical mode. See surfraw(1) for how to change it back.
	* New elvis: piratebay, genportage. Thanks to J.R. Mauro.
	* Add tests for piratebay and genportage.
	* Fix webster.
	* Fix test for ebay china.
	* README: document ./configure options

2008-08-26  Ian Beckwith  <ianb@erislabs.net>

	* Fixed tests: amazon, debbugs, yahoo.
	* Added --disable-sr option to ./configure to disable
	  installing the 'sr' symbolic link pointing to surfraw,
	  to avoid clashes with the SR programming language.

2008-07-19  Ian Beckwith  <ianb@erislabs.net>

	* Search for default browsers at configure time.
	  Can be overridden with ./configure --with-text-browser=BROWSER
	  --with-graphical-browser=BROWSER.
	* Use AC_PROG_AWK to detect which awk implementation to use.
	* slinuxdoc: switch to test on main page, google thinks
	  search on search page is spyware shenanigans.
	* openbsd: fix test.
	* add uninstall-local targets to remove elvidir and symlinks
	  on uninstall.

2008-07-08  Ian Beckwith  <ianb@erislabs.net>

	* google: fix bashism, quote variable expansions (thanks to
	  Philip Armstrong and John Briggs).

2008-07-02  Ian Beckwith  <ianb@erislabs.net>

	* surfraw.IN:w3_url_escape: escape "`", stop escaping ".".
	  (Thanks to Micah Anderson).
	* debpackages/debcontents:
	  + update options and distributions,
	  + add -a option to use archive.debian.net
	* Fix javasun test.
	* Add javasun.test and lsm.test to EXTRA_DIST.

2008-06-16  Ian Beckwith  <ianb@erislabs.net>

	* Thanks to John Gruenenfelder for:
	  + New elvi: arxiv.
	  + surfraw-update-path: fix csh syntax.
	* wetandwild: switched to weather.com, as yahoo now uses AJAX.