@@ -1,0 +1,28 @@
+#!/bin/sh
+#
+# AUTHOR: J.R. Mauro
+#
+# DATE: Sat Nov  1 18:01:13 EDT 2008
+#
+# DESC: Elvi to search The Urban Dictionary
+# elvis: urban		-- Search urbandictionary.com for a definition
+. surfraw || exit 1
+
+w3_usage_hook () {
+    cat <<EOF
+Usage: $w3_argv0 [options] [search words]...
+Description:
+  Look up a term in the Urban Dictionary
+EOF
+    w3_global_usage
+}
+
+w3_config
+w3_parse_args "$@"
+# w3_args now contains a list of arguments
+if test -z "$w3_args"; then
+    w3_browse_url "http://www.urbandictionary.com"
+else
+    escaped_args=`w3_url_of_arg $w3_args`
+    w3_browse_url "http://www.urbandictionary.com/define.php?term=${escaped_args}"
+fi
