@@ -70,6 +70,7 @@ elvi.1sr.gz @mandir@/man1/stockquote.1sr.gz
 elvi.1sr.gz @mandir@/man1/sunonesearch.1sr.gz
 elvi.1sr.gz @mandir@/man1/thesaurus.1sr.gz
 elvi.1sr.gz @mandir@/man1/translate.1sr.gz
+elvi.1sr.gz @mandir@/man1/urban.1sr.gz
 elvi.1sr.gz @mandir@/man1/w3css.1sr.gz
 elvi.1sr.gz @mandir@/man1/w3html.1sr.gz
 elvi.1sr.gz @mandir@/man1/w3link.1sr.gz
