@@ -1,2 +1,2 @@
 excite foo
-1 - 20 of \d+
+1\s+-\s+\d+\s+of\s+\d+
