@@ -1,2 +1,2 @@
 stockquote GOOG
-GOOGLE
+Google Inc.
