@@ -17,8 +17,10 @@
 
 Thu Oct 23 04:55:07 BST 2008  - surfraw 2.2.4
 
-  * New elvi: ntrs, scicom, springer.
-    Thanks to Wim Van Hoydonck.
+  * New elvi:
+    + ntrs, scicom, springer - Thanks to Wim Van Hoydonck.
+    + urban - Thanks to J. R. Mauro
+  * Fixed excite elvis.
 
 Sat Sep 13 20:40:01 BST 2008  - surfraw 2.2.3
 
