@@ -1,3 +1,10 @@
+2008-12-03  Ian Beckwith  <ianb@erislabs.net>
+
+	* New elvis: urban. Thanks to J. R. Mauro.
+	* Added test for urban.
+	* Fixed elvis: excite.
+	* Fixed test: stockquote.
+
 2008-10-23  Ian Beckwith  <ianb@erislabs.net>
 
 	* Bumped version to 2.2.4.
